fix nav collapse

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,14 @@ img {
   width: 100%;
 }
 
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
 /* Nav Bar */
 .logo {
   width: 65px;
@@ -205,6 +213,10 @@ p {
 /*width*/
 .w-16 {
   width: 16px !important;
+}
+
+.w-20 {
+  width: 20px !important;
 }
 
 .w-28 {
